# dinobot

./: .env.example  .gitignore  CLAUDE.md  COMMIT_MESSAGE.md  Dockerfile  README.md  __init__.py  check_db_schema.py  cleanup_invalid_data.py  docker-compose.yml  fly.toml  main.py  mongo-init.js  prometheus.yml  pyproject.toml  run.py  test_error_handling.py
.claude/: settings.local.json
config/: schema.json
core/: config.py  configuration.py  database.py  decorators.py  exceptions.py  global_error_handler.py  logger.py
docs/: API.md  CAREEROS_INTEGRATION.md  COMMANDS.md  DEPLOYMENT.md  GITHUB_SETUP.md  MCP_SETUP_GUIDE.md  MONITORING.md  QUICK_START.md  README.md
docs/adr/: ADR-001-fastapi-discord-hybrid.md  ADR-002-mongodb-conversation-state.md
docs/architecture/: system-overview.md
docs/decision-log/: DL-001-asyncio-single-process.md  DL-002-mongodb-ttl-session.md  README.md
docs/playbooks/: 01-careeros-api-down.md  02-bot-offline.md  03-sync-stuck.md
grafana/dashboards/: dinobot-overview.json  meetuploader-overview.json
mcp_server/: __init__.py  careeros_tools.py
models/: __init__.py  dtos.py  interfaces.py  service_interfaces.py
scripts/: check-deployment.sh  check_config.py  start-dev.sh
services/: analytics.py  chart_generator.py  discord_service.py  enhanced_search_service.py  mongodb_advanced.py  notion.py  search_service.py  sync_service.py
templates/: dinobot_setup_fixed.html
utils/: __init__.py  config_cli.py
wiki/: README.md  analytics.md  architecture.md  careeros.md  discord.md  mcp.md  notion.md  onboarding.md
(+76 files in other folders)
